# LOOV

./: CMakeLists.txt  LOOV.cpp  OCR_image.cpp  OCR_image.h  README  box_image.cpp  box_image.h  comb_output_LOOV.py  params.cpp  params.h  text_box_detection.cpp  text_box_detection.h  tools.cpp  tools.h  union_find.cpp  union_find.h
